combinedJavadoc refactored